Fixed temperature history and target temperature controlls
